{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 109,
  "lineage": "85383458-3159-569c-bd5d-0a298a661f64",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "db_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "136.110.37.125",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-11-11T09:00:44.004-08:00",
            "id": "projects/wandoor-odpit343/regions/asia-southeast1/addresses/wandoor-db-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "wandoor-db-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "wandoor-odpit343",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/regions/asia-southeast1/addresses/wandoor-db-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/zones/asia-southeast1-b/instances/wandoor-db"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "master_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.142.142.91",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-11-11T09:00:47.229-08:00",
            "id": "projects/wandoor-odpit343/regions/asia-southeast1/addresses/wandoor-master-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "wandoor-master-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "wandoor-odpit343",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/regions/asia-southeast1/addresses/wandoor-master-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/zones/asia-southeast1-b/instances/wandoor-master"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_argocd_nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30808"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-11T17:12:52.191-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wandoor-odpit343/global/firewalls/wandoor-allow-argocd-nodeport",
            "log_config": [],
            "name": "wandoor-allow-argocd-nodeport",
            "network": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/networks/default",
            "priority": 1000,
            "project": "wandoor-odpit343",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/firewalls/wandoor-allow-argocd-nodeport",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-11T09:04:43.061-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wandoor-odpit343/global/firewalls/wandoor-allow-backend",
            "log_config": [],
            "name": "wandoor-allow-backend",
            "network": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/networks/default",
            "priority": 1000,
            "project": "wandoor-odpit343",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/firewalls/wandoor-allow-backend",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "wandoor-master"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_db_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1521",
                  "5500"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-11T09:00:40.372-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wandoor-odpit343/global/firewalls/wandoor-allow-db-internal",
            "log_config": [],
            "name": "wandoor-allow-db-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/networks/default",
            "priority": 1000,
            "project": "wandoor-odpit343",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/firewalls/wandoor-allow-db-internal",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "wandoor-master",
              "wandoor-worker"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "wandoor-db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30081"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-11T09:04:43.155-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wandoor-odpit343/global/firewalls/wandoor-allow-frontend",
            "log_config": [],
            "name": "wandoor-allow-frontend",
            "network": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/networks/default",
            "priority": 1000,
            "project": "wandoor-odpit343",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/firewalls/wandoor-allow-frontend",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "wandoor-master"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_k3s_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443",
                  "10250"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8472"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-11-11T09:00:40.375-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wandoor-odpit343/global/firewalls/wandoor-allow-k3s-internal",
            "log_config": [],
            "name": "wandoor-allow-k3s-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/networks/default",
            "priority": 1000,
            "project": "wandoor-odpit343",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/firewalls/wandoor-allow-k3s-internal",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "wandoor-master",
              "wandoor-worker"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "wandoor-master",
              "wandoor-worker"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_lgtm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000",
                  "3100",
                  "3200",
                  "4320",
                  "9009",
                  "9090"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-11T09:00:40.369-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wandoor-odpit343/global/firewalls/wandoor-allow-lgtm",
            "log_config": [],
            "name": "wandoor-allow-lgtm",
            "network": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/networks/default",
            "priority": 1000,
            "project": "wandoor-odpit343",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/firewalls/wandoor-allow-lgtm",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "wandoor-monitoring"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443",
                  "30443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-11T09:00:40.378-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wandoor-odpit343/global/firewalls/wandoor-allow-master",
            "log_config": [],
            "name": "wandoor-allow-master",
            "network": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/networks/default",
            "priority": 1000,
            "project": "wandoor-odpit343",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/firewalls/wandoor-allow-master",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "wandoor-master"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_node_exporter",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9100"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-11T17:12:52.593-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wandoor-odpit343/global/firewalls/wandoor-allow-node-exporter",
            "log_config": [],
            "name": "wandoor-allow-node-exporter",
            "network": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/networks/default",
            "priority": 1000,
            "project": "wandoor-odpit343",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/firewalls/wandoor-allow-node-exporter",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "node-exporter"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_openvpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1194"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-11-11T09:04:43.090-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wandoor-odpit343/global/firewalls/wandoor-allow-openvpn",
            "log_config": [],
            "name": "wandoor-allow-openvpn",
            "network": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/networks/default",
            "priority": 1000,
            "project": "wandoor-odpit343",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/firewalls/wandoor-allow-openvpn",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "wandoor-master"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_worker_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "3000",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-11T09:00:40.452-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wandoor-odpit343/global/firewalls/wandoor-allow-worker-app",
            "log_config": [],
            "name": "wandoor-allow-worker-app",
            "network": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/networks/default",
            "priority": 1000,
            "project": "wandoor-odpit343",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/firewalls/wandoor-allow-worker-app",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "wandoor-worker"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "wandoor-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 80,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/zones/asia-southeast1-b/disks/wandoor-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/wandoor-odpit343/zones/asia-southeast1-b/instances/wandoor-db",
            "instance_id": "2677976347669585853",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata_fingerprint": "2_WC6V9q9wo=",
            "metadata_startup_script": "#!/bin/bash\nset -e\n\necho \"🚀 Starting setup for Oracle DB and Redis...\"\n\n# Update sistem dan install docker\nsudo apt-get update -y\nsudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common\n\n# Tambahkan repository Docker resmi\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -\nsudo add-apt-repository \\\n   \"deb [arch=amd64] https://download.docker.com/linux/ubuntu \\\n   $(lsb_release [...]
            "name": "wandoor-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "136.110.37.125",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/networks/default",
                "network_ip": "10.148.0.14",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/regions/asia-southeast1/subnetworks/default",
                "subnetwork_project": "wandoor-odpit343"
              }
            ],
            "project": "wandoor-odpit343",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/zones/asia-southeast1-b/instances/wandoor-db",
            "service_account": [
              {
                "email": "800632616769-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "wandoor-db"
            ],
            "tags_fingerprint": "fb88gt58OCs=",
            "zone": "asia-southeast1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.db_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "wandoor-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/zones/asia-southeast1-b/disks/wandoor-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/wandoor-odpit343/zones/asia-southeast1-b/instances/wandoor-master",
            "instance_id": "7870824668775473085",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "uOrQCEPJSoo=",
            "metadata_startup_script": "#!/bin/bash\r\nset -e\r\n\r\n# ==================================================\r\n# 1️⃣ Update \u0026 Install Dependencies\r\n# ==================================================\r\nsudo apt-get update -y\r\nsudo apt-get install -y curl\r\n\r\n# ==================================================\r\n# 2️⃣ Install K3s Master Node\r\n# ==================================================\r\ncurl -sfL https://get.k3s.io | sh -s - server \\\r\n  --cluster-init [...]
            "name": "wandoor-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.142.142.91",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/networks/default",
                "network_ip": "10.148.0.13",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/regions/asia-southeast1/subnetworks/default",
                "subnetwork_project": "wandoor-odpit343"
              }
            ],
            "project": "wandoor-odpit343",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/zones/asia-southeast1-b/instances/wandoor-master",
            "service_account": [
              {
                "email": "800632616769-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "wandoor-master"
            ],
            "tags_fingerprint": "UxUgD8Bu3dU=",
            "zone": "asia-southeast1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.master_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "wandoor-monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/zones/asia-southeast1-b/disks/wandoor-monitoring"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/wandoor-odpit343/zones/asia-southeast1-b/instances/wandoor-monitoring",
            "instance_id": "7956990981272657853",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "BS8hSAxbTgs=",
            "metadata_startup_script": "#!/bin/bash\r\nset -e\r\n\r\necho \"🔧 Updating system packages...\"\r\nsudo apt update -y \u0026\u0026 sudo apt upgrade -y\r\n\r\necho \"⚙️ Installing basic dependencies...\"\r\nsudo apt install -y curl wget git vim net-tools unzip ufw\r\n\r\necho \"🧱 Setting timezone...\"\r\nsudo timedatectl set-timezone Asia/Jakarta\r\n\r\necho \"✅ Basic setup complete!\"\r\n",
            "name": "wandoor-monitoring",
            "network_interface": [
              {
                "access_config": [
                  {
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/networks/default",
                "network_ip": "10.148.0.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/regions/asia-southeast1/subnetworks/default",
                "subnetwork_project": "wandoor-odpit343"
              }
            ],
            "project": "wandoor-odpit343",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/zones/asia-southeast1-b/instances/wandoor-monitoring",
            "service_account": [
              {
                "email": "800632616769-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "wandoor-monitoring"
            ],
            "tags_fingerprint": "H1THFrbMLMw=",
            "zone": "asia-southeast1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "wandoor-worker-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/zones/asia-southeast1-b/disks/wandoor-worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/wandoor-odpit343/zones/asia-southeast1-b/instances/wandoor-worker-1",
            "instance_id": "2166777378615746493",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "1RfN70fEpDc=",
            "metadata_startup_script": "#!/bin/bash\r\nset -e\r\n\r\n# Update dan install dependency dasar\r\nsudo apt-get update -y\r\nsudo apt-get install -y curl\r\n\r\n# Buat direktori konfigurasi K3s\r\nsudo mkdir -p /etc/rancher/k3s\r\n\r\n# Buat file konfigurasi untuk K3s agent\r\nsudo tee /etc/rancher/k3s/config.yaml \u003e /dev/null \u003c\u003cEOF\r\nserver: https://10.148.15.215:6443\r\ntoken: K10a89678a91b9372f099f065e47a58cc4d163cdb44a8095834d9cf1dd0f3b457f7::server:96bbc93c634bea5c [...]
            "name": "wandoor-worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/networks/default",
                "network_ip": "10.148.0.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/regions/asia-southeast1/subnetworks/default",
                "subnetwork_project": "wandoor-odpit343"
              }
            ],
            "project": "wandoor-odpit343",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/zones/asia-southeast1-b/instances/wandoor-worker-1",
            "service_account": [
              {
                "email": "800632616769-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "wandoor-worker"
            ],
            "tags_fingerprint": "cP8ZwItEOw8=",
            "zone": "asia-southeast1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "wandoor-worker-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/zones/asia-southeast1-b/disks/wandoor-worker-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/wandoor-odpit343/zones/asia-southeast1-b/instances/wandoor-worker-2",
            "instance_id": "170402830551506691",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "master_ip": "10.148.0.13"
            },
            "metadata_fingerprint": "tcP-QtBumXY=",
            "metadata_startup_script": "#!/bin/bash\r\nset -e\r\n\r\n# Update dan install dependency dasar\r\nsudo apt-get update -y\r\nsudo apt-get install -y curl\r\n\r\n# Buat direktori konfigurasi K3s\r\nsudo mkdir -p /etc/rancher/k3s\r\n\r\n# Buat file konfigurasi untuk K3s agent\r\nsudo tee /etc/rancher/k3s/config.yaml \u003e /dev/null \u003c\u003cEOF\r\nserver: https://10.148.15.215:6443\r\ntoken: K10a89678a91b9372f099f065e47a58cc4d163cdb44a8095834d9cf1dd0f3b457f7::server:96bbc93c634bea5c [...]
            "name": "wandoor-worker-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/global/networks/default",
                "network_ip": "10.148.0.15",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/regions/asia-southeast1/subnetworks/default",
                "subnetwork_project": "wandoor-odpit343"
              }
            ],
            "project": "wandoor-odpit343",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/wandoor-odpit343/zones/asia-southeast1-b/instances/wandoor-worker-2",
            "service_account": [
              {
                "email": "800632616769-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "wandoor-worker"
            ],
            "tags_fingerprint": "cP8ZwItEOw8=",
            "zone": "asia-southeast1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.master_ip",
            "google_compute_instance.wandoor-master"
          ]
        }
      ]
    }
  ]
}